@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "08 June 2013" "" ""
+.TH TURN 1 "12 June 2013" "" ""
 .SH GENERAL INFORMATION
 
 \fIturnadmin\fP is a TURN administration tool. This tool can be used to manage 
@@ -245,3 +245,5 @@ Lee Sylvester <lee@designrealm.co.uk>
 Erik Johnston <erikj@openmarket.com>
 .PP
 Roman Lisagor <roman@demonware.net>
+.PP
+Vladimir Tsanev <tsachev@gmail.com>
