@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "08 June 2013" "" ""
+.TH TURN 1 "12 June 2013" "" ""
 .SH GENERAL INFORMATION
 
 The \fBTURN Server\fP project contains the source code of a TURN server and TURN client 
@@ -894,3 +894,8 @@ Lee Sylvester <lee@designrealm.co.uk>
 Erik Johnston <erikj@openmarket.com>
 .PP
 Roman Lisagor <roman@demonware.net>
+.PP
+Vladimir Tsanev <tsachev@gmail.com>
+.RE
+.PP
+
