@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "08 June 2013" "" ""
+.TH TURN 1 "12 June 2013" "" ""
 .SH GENERAL INFORMATION
 
 A set of turnutils_* programs provides some utility functionality to be used
@@ -364,3 +364,5 @@ Lee Sylvester <lee@designrealm.co.uk>
 Erik Johnston <erikj@openmarket.com>
 .PP
 Roman Lisagor <roman@demonware.net>
+.PP
+Vladimir Tsanev <tsachev@gmail.com>
